# ImageDeblurring

./: README.md
Collection/: CMakeLists.txt  main.cpp
Collection/BlurKernel/: CMakeLists.txt  GyroBlurKernelBuilder.h  SparseBlurKernel.cpp  SparseBlurKernel.h
Collection/FftDeblurrer/: CMakeLists.txt  CutOffFftDeblurrer.cpp  CutOffFftDeblurrer.h  FftDeblurrer.h  FftRegularizer.h  GradientFftRegularizer.cpp  HLFftRegularizer.cpp  HLFftRegularizer.h  HLTwoThirdsFftRegularizer.cpp  InverseFftDeblurrer.cpp  InverseFftDeblurrer.h  LaplaceFftRegularizer.cpp  LsFftDeblurrer.cpp  TmFftRegularizer.cpp  TmFftRegularizer.h  TvFftRegularizer.cpp  TvFftRegularizer.h
Collection/ImageDeblurrer/: CMakeLists.txt  ImageDeblurrer.cpp  ImageDeblurrer.h
Collection/IterativeDeblurrer/: CMakeLists.txt  CgDeblurrer.cpp  CgDeblurrer.h  GradientsIterationRegularizer.cpp  GradientsIterationRegularizer.h  HLIterationRegularizer.cpp  IterationRegularizer.cpp  IterativeDeblurrer.cpp  IterativeDeblurrer.h  LaplaceIterationRegularizer.cpp  LrDeblurrer.cpp  LrDeblurrer.h  MaskLaplaceIterationRegularizer.cpp  MaskLaplaceIterationRegularizer.h  TmIterationRegularizer.cpp  TmIterationRegularizer.h  TvIterationRegularizer.cpp  TvIterationRegularizer.h  vanCittertDeblurrer.cpp  vanCittertDeblurrer.h
Collection/OcvFftDeblurrer/: CMakeLists.txt  OcvFftDeblurrer.cpp  OcvFftDeblurrer.h  OcvFftTmDeblurrer.cpp  OcvFftTmDeblurrer.h  OcvFftTvDeblurrer.cpp  OcvFftTvDeblurrer.h
Collection/Utils/: CMakeLists.txt  CoreCommon.h  DiscreteAngularVelocitiesIntegrator.h  GyroDataCorrection.h  MathCommon.h  Quaternion.h  Time.h  Vector.h  Versor.h
Collection/experiment/: CMakeLists.txt  CgTmDeblurrer.cpp  CgTmDeblurrer.h  CgTvDeblurrer.cpp  CgTvDeblurrer.h  LrTmDeblurrer.cpp  LrTmDeblurrer.h  LrTvDeblurrer.cpp  LrTvDeblurrer.h  vanCittertTmDeblurrer.cpp  vanCittertTmDeblurrer.h  vanCittertTvDeblurrer.cpp  vanCittertTvDeblurrer.h
Demo/: CMakeLists.txt
Demo/DeblurUtils/: CMakeLists.txt  blurrf.cpp
Demo/MBKAuto/: CMakeLists.txt  main.cpp
Demo/MBKcg/: CMakeLists.txt  main.cpp
Demo/MBKrl/: CMakeLists.txt  main.cpp
Demo/MBR_HLS/: CMakeLists.txt  main.cpp
Demo/MBR_HSV/: CMakeLists.txt  main.cpp
Demo/MBR_Lab/: CMakeLists.txt  main.cpp
Demo/MBR_Luv/: CMakeLists.txt  main.cpp
Demo/MBR_YCrCb/: CMakeLists.txt  main.cpp
Demo/MotionBlurKernel/: CMakeLists.txt  main.cpp
Demo/MotionBlurReal/: CMakeLists.txt  main.cpp
Demo/MotionBlurr/: CMakeLists.txt  main.cpp
Demo/MotionBlurrRN/: CMakeLists.txt  main.cpp
Demo/MotionDeblNoisFilt/: CMakeLists.txt  main.cpp
Demo/MotionDeblurNoise/: CMakeLists.txt  main.cpp
GiroDemo/giroBlurImage/: CMakeLists.txt
GiroDemo/giroBlurImage/include/: BlurKernelUtils.h  GyroBlurKernelBuilder.h  GyroBlurParams.h  GyroDataReader.h  SparseBlurKernel.h
GiroDemo/giroBlurImage/src/: BlurKernelUtils.cpp  GyroBlurKernelBuilder.cpp  main.cpp
GiroDemo/giroDeblurImage/: CMakeLists.txt
GiroDemo/giroDeblurImage/include/: BlurKernelUtils.h  CgDeblurrer.h  GyroBlurParams.h  IterationRegularizer.h  IterativeDeblurrer.h  LaplaceIterationRegularizer.h  LrDeblurrer.h  vanCittertDeblurrer.h
GiroDemo/giroDeblurImage/src/: CgDeblurrer.cpp  GyroBlurParams.cpp  HLIterationRegularizer.cpp  IterativeDeblurrer.cpp  LrDeblurrer.cpp  SparseBlurKernel.cpp  main.cpp  vanCittertDeblurrer.cpp
GiroDemo/giroGridDeblurImage/: CMakeLists.txt
GiroDemo/giroGridDeblurImage/include/: BlurKernelUtils.h  CgDeblurrer.h  FftDeblurrer.h  GradientFftRegularizer.h  HLIterationRegularizer.h  HLTwoThirdsFftRegularizer.h  IterativeDeblurrer.h  LaplaceFftRegularizer.h  LrDeblurrer.h  LsFftDeblurrer.h  vanCittertDeblurrer.h
GiroDemo/giroGridDeblurImage/src/: BlurKernelUtils.cpp  CgDeblurrer.cpp  CutOffFftDeblurrer.cpp  FftDeblurrer.cpp  FftRegularizer.cpp  GradientFftRegularizer.cpp  GradientsIterationRegularizer.cpp  HLFftRegularizer.cpp  HLTwoThirdsFftRegularizer.cpp  ImageDeblurrer.cpp  InverseFftDeblurrer.cpp  IterativeDeblurrer.cpp  LaplaceFftRegularizer.cpp  LaplaceIterationRegularizer.cpp  LrDeblurrer.cpp  LsFftDeblurrer.cpp  MaskLaplaceIterationRegularizer.cpp  TmFftRegularizer.cpp  TmIterationRegularizer.cpp  TvFftRegularizer.cpp  TvIterationRegularizer.cpp  main.cpp  vanCittertDeblurrer.cpp
Samples/Basic/Cpp/: CMakeLists.txt  main.cpp
Samples/BlurKernels/BlurKernel/: CMakeLists.txt
Samples/BlurKernels/BlurKernel/testBlurKernel/: main.cpp
Samples/BlurKernels/BlurKernel/testBlurKernelC/: main.c
Samples/BlurKernels/sparseBlurKernel/: CMakeLists.txt
Samples/BlurKernels/sparseBlurKernel/include/: SparseBlurkernel.hpp
Samples/BlurKernels/sparseBlurKernel/src/: SparseBlurkernel.cpp  SparseBlurkernel_test.cpp
Samples/FFT/1d_blind_deconvolution_cga/: CMakeLists.txt  main.cpp
Samples/FFT/fdb/: CMakeLists.txt  main.cpp
Samples/FFT/implementations/: CMakeLists.txt  main.cpp
Samples/FFT/implementations/include/: fft.hpp  impl1.hpp  impl2.hpp  impl3.hpp
Samples/FFT/implementations/src/: fft.cpp  impl1.cpp  impl2.cpp  impl3.cpp
Samples/Giro/giro_process_test/: CMakeLists.txt
Samples/Giro/giro_process_test/Blur/: CMakeLists.txt  main.cpp
Samples/Giro/giro_process_test/CalcKernel01/: CMakeLists.txt  main.cpp
Samples/Giro/giro_process_test/CalcKernel02/: CMakeLists.txt  main.cpp
Samples/Giro/giro_process_test/CalcKernel03/: CMakeLists.txt  GyroBlurKernel.h  main.cpp
Samples/Giro/giro_process_test/CalcKernel04/: BlockDeblur.h  CMakeLists.txt  GyroBlurKernel.h  ParseGyroData.h  main.cpp
Samples/Giro/giro_process_test/Deblur/: BlindDeblur.h  BlockDeblur.h  CMakeLists.txt  GyroBlurKernel.h  main.cpp
Samples/Giro/giro_process_test/GiroProcessor/: CMakeLists.txt  CircularBuffer.h  Common.h  DiscreteOrientationPath.h  GyroDataCorrection.h  Matrix.h  OrientationPath.h
Samples/Giro/giro_process_test/Plot/: CMakeLists.txt  main.cpp
Samples/Giro/giro_process_test/Regularization01/: CMakeLists.txt  main.cpp
Samples/Giro/giro_process_test/Regularization02/: CMakeLists.txt  (+1 more)
Samples/Giro/regularization03/: CMakeLists.txt  main.cpp
Samples/Noise/noise_norm_comparison/: CMakeLists.txt  main.cpp
(+206 files in other folders)
