cmake_minimum_required(VERSION 3.20)

project(DeblurDemo)

add_subdirectory(DeblurUtils)
add_subdirectory(MBKAuto)
add_subdirectory(MBKcg)
add_subdirectory(MBKrl)
add_subdirectory(MBR_HLS)
add_subdirectory(MBR_HSV)
add_subdirectory(MBR_Lab)
add_subdirectory(MBR_Luv)
add_subdirectory(MBR_YCrCb)
add_subdirectory(MotionBlurKernel)
add_subdirectory(MotionBlurr)
add_subdirectory(MotionBlurReal)
add_subdirectory(MotionBlurrRN)
add_subdirectory(MotionDeblNoisFilt)
add_subdirectory(MotionDeblurNoise)
