cmake_minimum_required(VERSION 3.20)

project(GiroProcessorDe)

add_subdirectory(GiroProcessor)
add_subdirectory(Test)
add_subdirectory(Plot)
add_subdirectory(Blur)
add_subdirectory(CalcKernel01)
add_subdirectory(CalcKernel02)
add_subdirectory(CalcKernel03)
add_subdirectory(CalcKernel04)
add_subdirectory(Regularization01)
add_subdirectory(Regularization02)
add_subdirectory(Deblur)

